--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 html {
   color: #222;
   font-size: 1em;
@@ -71,7 +75,9 @@ textarea {
   grid-column-gap: 23px;
   grid-template-columns: 1fr auto 1fr;
   grid-template-rows: 50px auto 1fr;
-  margin: 40px;
+  padding: 40px;
+  width: 100%;
+  height: 100%;
 }
 
 .shape-contain {
@@ -79,13 +85,12 @@ textarea {
   justify-content: center;
   align-items: flex-end;
   width: 40vw;
-  min-height: 92vh;
+  min-height: 80vh;
   grid-column: 2 / 3;
   grid-row: 2 / 3;
   justify-self: center;
   align-self: end;
   position: relative;
-
 }
 
 .subtitle-container {
@@ -111,7 +116,7 @@ textarea {
 
 #main-blurb{
   grid-column: 3 / 4;
-  font-size: 1rem;
+  font-size: 0.85rem;
   font-family: Nordique Pro;
   font-weight: 400;
 }
@@ -119,7 +124,7 @@ textarea {
 .shape-contain .shape {
   display: block;
   position: absolute;
-  bottom: 0;
+  bottom: -10%;
 }
 
 #full-circ {
@@ -203,6 +208,41 @@ textarea {
 
 #qrtr-circ.qrtrhover{
   fill: #E26F3B;
+}
+
+
+
+.speakers-container{
+  display: grid;
+  grid-column-gap: 12px;
+  grid-template-columns: repeat(5, 16.6%) 1fr;
+  padding: 40px;
+  width: 100%;
+  height: 100%;
+}
+
+.speakers-container .speaker-list{
+  display: block;
+  border: 1px solid black;
+  width: 100%;
+  grid-column: 1/4;
+}
+.speakers-container .speaker{
+  margin-bottom: 1rem;
+}
+.speakers-container .speaker h2{
+  font-family: Futura PT;
+  font-weight: 500;
+  font-size: 2.5rem;
+  margin: 0;
+  line-height: 1;
+}
+.speakers-container .speaker p{
+  font-family: Futura PT;
+  font-weight: 100;
+  font-size: 1.25rem;
+  margin: 0;
+  line-height: 1;
 }
 /* ==========================================================================
    Helper classes
