--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,7 @@ textarea {
   grid-template-rows: 50px auto 1fr;
   padding: 40px;
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 
 .shape-contain {
@@ -218,14 +218,27 @@ textarea {
   grid-template-columns: repeat(5, 16.6%) 1fr;
   padding: 40px;
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 
-.speakers-container .speaker-list{
+.speakers-container .featured-subheader{
+  font-family: Futura PT;
+  font-weight: 500;
+  text-transform: capitalize;
+  font-size: 1.35vw;
+  margin: none;
+}
+
+.speakers-container .speaker-list-wrapper{
   display: block;
-  border: 1px solid black;
   width: 100%;
   grid-column: 1/4;
+  border: 1px solid black;
+  transform: rotate(-90deg);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-end;
 }
 .speakers-container .speaker{
   margin-bottom: 1rem;
@@ -233,14 +246,14 @@ textarea {
 .speakers-container .speaker h2{
   font-family: Futura PT;
   font-weight: 500;
-  font-size: 2.5rem;
+  font-size: 3.5vw;;
   margin: 0;
   line-height: 1;
 }
 .speakers-container .speaker p{
   font-family: Futura PT;
   font-weight: 100;
-  font-size: 1.25rem;
+  font-size: 1.35vw;
   margin: 0;
   line-height: 1;
 }
