--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,24 @@
+@font-face {
+  font-family: Nordique Pro;
+  src: url(../assets/fonts/NordiquePro-Regular.otf);
+}
+
+@font-face {
+  font-family: NordiquePro-Bold;
+  src: url(../assets/fonts/NordiquePro-Bold.otf);
+}
+
+@font-face {
+  font-family: NordiquePro-Light;
+  src: url(../assets/fonts/NordiquePro-Light.otf);
+}
+
+@font-face {
+  font-family: NordiquePro-Semibold;
+  src: url(../assets/fonts/NordiquePro-Semibold.otf);
+}
+
+
 * {
   box-sizing: border-box;
 }
@@ -72,9 +93,9 @@ textarea {
    ========================================================================== */
 .main-container {
   display: grid;
-  grid-column-gap: 23px;
-  grid-template-columns: 1fr auto 1fr;
-  grid-template-rows: 50px 1fr 1fr;
+  grid-column-gap: 1vw;
+  grid-template-columns: minmax(25%, 1fr) 1fr minmax(25%, 1fr);
+  grid-template-rows: 70px minmax(50%, auto) 1fr;
   padding: 40px;
   width: 100%;
   height: 100vh;
@@ -85,7 +106,7 @@ textarea {
   justify-content: center;
   align-items: flex-end;
   width: 40vw;
-  min-height: 80vh;
+  min-height: 90vh;
   grid-column: 2 / 3;
   grid-row: 2 / 3;
   justify-self: center;
@@ -103,8 +124,7 @@ textarea {
 
 .subtitle-container .main-title {
   font-size: 3.5vw;
-  font-family: Nordique Pro;
-  font-weight: 600;
+  font-family: NordiquePro-Semibold;
 }
 
 .subtitle-container .subtitle {
@@ -127,7 +147,9 @@ textarea {
 .shape-contain .shape {
   display: block;
   position: absolute;
-  bottom: -10%;
+  bottom: -8%;
+  width: 100%;
+  z-index: -1;
 }
 
 #full-circ {
