--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+
+
+
 * {
   box-sizing: border-box;
 }
@@ -70,15 +73,17 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+
 .main-container {
   display: grid;
   grid-column-gap: 23px;
-  grid-template-columns: 1fr auto 1fr;
-  grid-template-rows: 50px 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 50px 1fr;
   padding: 40px;
   width: 100%;
   height: 100vh;
 }
+
 
 .shape-contain {
   display: flex;
@@ -93,6 +98,33 @@ textarea {
   position: relative;
 }
 
+.shape-contain .shape {
+  display: block;
+  position: absolute;
+  bottom: -10%;
+  height: auto;
+}
+
+@media only screen and (max-width: 1100px) {
+  .shape-contain {
+    grid-column: 1/4;
+    width: 50vw;
+    max-height: 40vh;
+  }
+
+  .shape-contain .shape {
+    display: block;
+    position: absolute;
+    bottom: -8%;
+  }
+
+  .main-container {
+    grid-column-gap: 14px;
+    grid-template-columns: 1fr 50% 1fr;
+    grid-template-rows: 50px 1fr;
+  }
+}
+
 .subtitle-container {
   grid-column: 2/3;
 }
@@ -102,13 +134,13 @@ textarea {
 }
 
 .subtitle-container .main-title {
-  font-size: 3.5vw;
+  font-size: 3.25vw;
   font-family: Nordique Pro;
   font-weight: 600;
 }
 
 .subtitle-container .subtitle {
-  font-size: 3.5vw;
+  font-size: 3.25vw;
   font-family: Nordique Pro;
   font-weight: 400;
   margin-left: 0.75rem;
@@ -121,13 +153,23 @@ textarea {
   font-weight: 400;
   padding-top: 0.75vh;
   padding-right: 0.1vw;
-  margin-left: -3vw;
 }
 
-.shape-contain .shape {
-  display: block;
-  position: absolute;
-  bottom: -10%;
+
+#arrow {
+  grid-column: 3/4;
+  grid-row: 2/3;
+  align-self: center;
+}
+
+.arrow-path {
+  fill: white;
+  transform-origin: right;
+  transform: translateY(50%) translateX(80%);
+}
+
+.arrow-path:hover{
+  fill: #555555;
 }
 
 #full-circ {
