--- a/css/main.css
+++ b/css/main.css
@@ -135,6 +135,7 @@ textarea {
   display: flex;
   width: 100%;
   height: 60px;
+  justify-content: space-between;
   align-self: end;
   padding-top: 2rem;
 }
@@ -142,9 +143,8 @@ textarea {
 #mobile-nav a {
   font-size: 1.25rem;
   font-family: Nordique Pro;
-  font-weight: 400;
-  display: inline-block;
-  padding-right: 2.5rem;
+  font-weight: 600;
+  display: block;
   text-decoration: none;
   color: #005EB8;
 }
@@ -152,7 +152,7 @@ textarea {
 @media only screen and (max-width: 501px) {
   .shape-contain {
     grid-column: 1/4;
-    width: 60vw;
+    width: 65vw;
   }
 
   .shape-contain .shape {
