--- a/css/main.css
+++ b/css/main.css
@@ -286,6 +286,11 @@ textarea {
   color: #005EB8;
 }
 
+#mobile-nav a:hover, #mobile-nav a:focus, #mobile-nav a:active{
+  color: #CDD2E9;
+  text-decoration: underline;
+}
+
 
 #arrow {
   grid-column: 3/4;
