--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,20 @@
 
-
+@font-face {
+  font-family: Nordique Pro Bold;
+  src: url(../assets/fonts/NordiquePro-Bold.otf);
+}
+@font-face {
+  font-family: Nordique Pro Light;
+  src: url(../assets/fonts/NordiquePro-Light.otf);
+}
+@font-face {
+  font-family: Nordique Pro;
+  src: url(../assets/fonts/NordiquePro-Regular.otf);
+}
+@font-face {
+  font-family: Nordique Pro Semibold;
+  src: url(../assets/fonts/NordiquePro-Semibold.otf);
+}
 
 * {
   box-sizing: border-box;
@@ -120,15 +135,15 @@ textarea {
 
    .subtitle-container .main-title {
      font-size: 1.5rem;
-     font-family: Nordique Pro;
-     font-weight: 600;
+     font-family: Nordique Pro Semibold;
+     font-weight: 400;
      display: inline-block;
      margin: 0;
    }
 
    .subtitle-container .subtitle {
      font-size: 1.5rem;
-     font-family: Nordique Pro;
+     font-family: Nordique Pro Light;
      font-weight: 400;
      display: inline-block;
      margin: 0;
@@ -138,7 +153,7 @@ textarea {
    #main-blurb{
      grid-column: 3 / 4;
      font-size: 0.9rem;
-     font-family: Nordique Pro;
+     font-family: Nordique Pro Light;
      font-weight: 400;
    }
 
