--- a/css/main.css
+++ b/css/main.css
@@ -235,7 +235,7 @@ textarea {
   .main-container {
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow-y: hidden;
     perspective: 1000;
   }
 
@@ -244,9 +244,16 @@ textarea {
     height: 100%;
   }
 
+  .main-container .sections .section {
+    height: 100%;
+    width: calc(100%/ 2);
+    float: left;
+  }
+
   .splash-container {
     grid-template-columns: 1fr auto 1fr;
     padding: 40px;
+    height: 100%;
   }
 
   .shape-contain {
@@ -294,8 +301,6 @@ textarea {
     grid-column-gap: 12px;
     grid-template-columns: repeat(6, 1fr);
     padding: 40px;
-    width: 100%;
-    height: 100vh;
   }
 
   .speakers-container .featured-subheader {
