--- a/css/main.scss
+++ b/css/main.scss
@@ -241,11 +241,10 @@ textarea {
    @media only screen and (min-width: 1024px){
       /* For desktop: */
 
-
       .main-container {
         width: 100%;
         height: 100%;
-        overflow: hidden;
+        overflow-y: hidden;
         perspective: 1000;
       }
 
@@ -254,9 +253,16 @@ textarea {
         height: 100%;
       }
 
+      .main-container .sections .section{
+        height: 100%;
+        width: calc(100%/ #{2});
+        float: left;
+      }
+
       .splash-container {
         grid-template-columns: 1fr auto 1fr;
         padding: 40px;
+        height: 100%;
       }
 
       .shape-contain {
@@ -303,8 +309,8 @@ textarea {
         grid-column-gap: 12px;
         grid-template-columns: repeat(6, 1fr);
         padding: 40px;
-        width: 100%;
-        height: 100vh;
+        // width: 100%;
+        // height: 100vh;
       }
 
       .speakers-container .featured-subheader{
