--- a/css/main.css
+++ b/css/main.css
@@ -159,6 +159,42 @@ textarea {
   display: none;
 }
 
+.speakers-container .side-nav {
+  display: hidden;
+}
+
+.speakers-container {
+  width: 100%;
+  height: 100vh;
+  padding: 3rem 40px;
+}
+
+.speakers-container .speaker-list-wrapper {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  font-family: Futura PT;
+}
+
+.speaker-list-wrapper .speaker-box {
+  display: inline-block;
+  margin-bottom: 0.75rem;
+}
+
+.speaker-box h2 {
+  margin: 0;
+  line-height: 1.25;
+  font-weight: 500;
+}
+
+.speaker-box p {
+  margin: 0;
+  line-height: 1;
+  font-weight: 100;
+}
+
 @media only screen and (min-width: 600px) {
   /* For tablets: */
   .splash-container {
@@ -313,10 +349,8 @@ textarea {
   .speakers-container .speaker-list-wrapper {
     display: block;
     width: 100%;
-    height: 100%;
+    height: 90vh;
     grid-column: 1/4;
-    /* transform: rotate(-90deg); */
-    position: relative;
     display: flex;
     flex-direction: row;
     align-items: flex-end;
@@ -333,14 +367,20 @@ textarea {
   .speakers-container .speaker-box {
     margin-right: 1.25vw;
     writing-mode: vertical-lr;
-    height: 90%;
     transform: rotate(180deg);
+    display: inline-block;
+    align-self: flex-end;
+    transition: margin-bottom 0.25s ease-out;
+  }
+
+  .speakers-container .speaker-box:hover {
+    margin-bottom: 1.5rem;
   }
 
   .speakers-container .speaker-box h2 {
     font-weight: 500;
     font-size: 3.5vw;
-    margin: 0;
+    margin: 0 0.25rem;
     line-height: 1;
   }
 
@@ -348,7 +388,46 @@ textarea {
     font-weight: 100;
     font-size: 1.35vw;
     margin: 0;
-    line-height: 0.5;
+    line-height: 0.55;
+  }
+
+  .speakers-container .photo-area {
+    grid-column: 4/7;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .photo-area .speaker-img {
+    box-sizing: border-box;
+    height: 100px;
+    width: 100px;
+  }
+
+  #asana-img {
+    background-color: pink;
+  }
+
+  #telus-img {
+    background-color: purple;
+  }
+
+  #allpurpose-img {
+    background-color: blue;
+  }
+
+  #everyday-img {
+    background-color: black;
+  }
+
+  #engine-img {
+    background-color: green;
+  }
+
+  #dossier-img {
+    background-color: red;
   }
 }
 #mobile-nav {
