--- a/css/main.scss
+++ b/css/main.scss
@@ -200,6 +200,9 @@ textarea {
      font-weight: 100;
    }
 
+   .photo-area{
+     display: none;
+   }
 
    @media only screen and (min-width: 600px) {
      /* For tablets: */
@@ -407,34 +410,35 @@ textarea {
         align-items: center;
       }
 
-      .photo-area .speaker-img{
+      .speaker-img{
         box-sizing: border-box;
-        height: 100px;
-        width: 100px;
+        height: auto;
       }
 
-      #asana-img{
-        background-color: pink;
-      }
+      .photo-area {
+        .asana-img{
+          width: 10rem;
+        }
 
-      #telus-img{
-        background-color: purple;
-      }
+        .telus-img{
+          width: 13rem;
+        }
 
-      #allpurpose-img{
-        background-color: blue;
-      }
+        .allpurpose-img{
+          width: 10rem;
+        }
 
-      #everyday-img{
-        background-color: black;
-      }
+        .everyday-img{
+          width: 11rem;
+        }
 
-      #engine-img{
-        background-color: green;
-      }
+        .engine-img{
+          width: 13rem;
+        }
 
-      #dossier-img{
-        background-color: red;
+        .dossier-img{
+          width: 200px;
+        }
       }
    }
 
