--- a/css/main.scss
+++ b/css/main.scss
@@ -20,6 +20,11 @@
   src: url(../assets/fonts/FuturaPT_Light.otf);
 }
 
+@font-face {
+  font-family: Futura PT;
+  src: url(../assets/fonts/FuturaPT-Medium.otf);
+}
+
 * {
   box-sizing: border-box;
 }
