--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,10 @@
   font-family: Futura PT Light;
   src: url(../assets/fonts/FuturaPT_Light.otf);
 }
+@font-face {
+  font-family: Futura PT;
+  src: url(../assets/fonts/FuturaPT-Medium.otf);
+}
 * {
   box-sizing: border-box;
 }
